# k8s-sentinel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  build-push.sh  deploy.sh  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
ansible/playbooks/: fix-containerd-cri.yml
charts/k8s-sentinel/: Chart.yaml  values-3q-prod.yaml  values.yaml
docs/: GO_TO_MARKET.md  INSTALL_HELM.md  POD_DESIGN.md  PRODUCT.md  PUBLIC_REPO_PLAN.md  index.html
examples/helm/: values-ansible.yaml  values-check-only.yaml  values-onepassword.yaml
examples/private-cluster/: README.md
manifests/: 1password-items.yaml  DEPRECATED.md  job-gitops-cursor-e2e.yaml  job-phase4-smoke.yaml  rbac.yaml
manifests/examples/: manual-job.example.yaml
scripts/: main.py
scripts/checks/: __init__.py  base.py  components_check.py  containerd_check.py  cronjobs_check.py  disk_check.py  kubectl_nodes.py  kubelet_check.py  pod_check.py  resources_check.py  runc_check.py
scripts/fixers/: __init__.py  ansible_runner.py
scripts/gitops/: __init__.py  archive-sentinel-agents.sh  archive_sentinel_agents.ts  cursor_fix_pr.ts  eligibility.py  pr_creator.py  repo_bootstrap.py
scripts/lib/: cursor-agent-runtime.ts  cursor-model.ts
scripts/metrics/: prometheus.py  pushgateway.py
scripts/notify/: __init__.py  telegram.py
scripts/smoke/: gitops_e2e.py  phase3_ansible_e2e.py  run-gitops-e2e.sh  run-phase3-e2e.sh
tekton/: pipeline-sentinel-release.yaml  release-sentinel-build.sh
(+26 files in other folders)
