[project]
name = "k8s-sentinel"
version = "0.2.3"
description = "Kubernetes cluster health checks and automated repair"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
pythonpath = ["scripts"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/tests/*" = ["I001"]
